Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,6 +61,7 @@
    "source": [
     "def three_x_y_at_one(x):\n",
     "    \n",
+    "    ans=\n",
     "    pass\n",
     "\n",
     "def three_x_y_at_three(x):\n",
