--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "def three_x_y_at_one(x):\n",
     "    ans=[]\n",
-    "    fo\n",
+    "    for i in x\n",
     "    ans.append(3*x*1)\n",
     "    pass\n",
     "\n",
