--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -62,7 +62,7 @@
     "def three_x_y_at_one(x):\n",
     "    ans=[]\n",
     "    for i in x\n",
-    "    ans.append(3*x*1)\n",
+    "    ans=(3*x*1)\n",
     "    pass\n",
     "\n",
     "def three_x_y_at_three(x):\n",
