Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -66,9 +66,15 @@
     "    pass\n",
     "\n",
     "def three_x_y_at_three(x):\n",
+    "    ans=[]\n",
+    "    ans=(3*x*1)\n",
+    "    print(ans)\n",
     "    pass\n",
     "\n",
     "def three_x_y_at_six(x):\n",
+    "    ans=[]\n",
+    "    ans=(3*x*1)\n",
+    "    print(ans)\n",
     "    pass\n",
     "\n",
     "def three_x_y_at_nine(x):\n",
