--- a/index.ipynb
+++ b/index.ipynb
@@ -124,8 +124,9 @@
     "zero_to_four = list(range(0, 5))\n",
     "\n",
     "def y_values_for_at_one(x_values):\n",
+    "    ans=[]\n",
     "    for x in x_values\n",
-    "        ans\n",
+    "        ans.append()\n",
     "    pass\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
