Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,7 @@
     "def y_values_for_at_one(x_values):\n",
     "    ans=[]\n",
     "    for x in x_values\n",
-    "        ans.append()\n",
+    "        ans.append(3*x*)\n",
     "    pass\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
