--- a/index.ipynb
+++ b/index.ipynb
@@ -127,11 +127,15 @@
     "    ans=[]\n",
     "    for x in x_values\n",
     "        ans.append(3*x*1)\n",
+    "    print(ans)\n",
     "    pass\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
+    "    ans=[]\n",
+    "    for x in x_values\n",
+    "        ans.append(3*x*1)\n",
+    "    print(ans)\n",
     "    pass\n",
-    "\n",
     "def y_values_for_at_six(x_values):\n",
     "    pass\n",
     "\n",
