Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,10 +136,19 @@
     "        ans.append(3*x*1)\n",
     "    print(ans)\n",
     "    pass\n",
+    "\n",
     "def y_values_for_at_six(x_values):\n",
+    "    ans=[]\n",
+    "    for x in x_values\n",
+    "        ans.append(3*x*1)\n",
+    "    print(ans)\n",
     "    pass\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
+    "    ans=[]\n",
+    "    for x in x_values\n",
+    "        ans.append(3*x*1)\n",
+    "    print(ans)\n",
     "    pass"
    ]
   },
