--- a/index.ipynb
+++ b/index.ipynb
@@ -114,11 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-af8b9c7e67a2>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-af8b9c7e67a2>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    for x in x_values\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "zero_to_ten = list(range(0, 11))\n",
     "zero_to_four = list(range(0, 5))\n",
@@ -133,21 +140,21 @@
     "def y_values_for_at_three(x_values):\n",
     "    ans=[]\n",
     "    for x in x_values\n",
-    "        ans.append(3*x*1)\n",
+    "        ans.append(3*x*3)\n",
     "    print(ans)\n",
     "    pass\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
     "    ans=[]\n",
     "    for x in x_values\n",
-    "        ans.append(3*x*1)\n",
+    "        ans.append(3*x*6)\n",
     "    print(ans)\n",
     "    pass\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
     "    ans=[]\n",
     "    for x in x_values\n",
-    "        ans.append(3*x*1)\n",
+    "        ans.append(3*x*9)\n",
     "    print(ans)\n",
     "    pass"
    ]
