Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -132,21 +132,21 @@
     "\n",
     "def y_values_for_at_one(x_values):\n",
     "    ans=[]\n",
-    "    for x in x_values\n",
+    "    for x in x_values:\n",
     "        ans.append(3*x*1)\n",
     "    print(ans)\n",
     "    pass\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
     "    ans=[]\n",
-    "    for x in x_values\n",
+    "    for x in x_values:\n",
     "        ans.append(3*x*3)\n",
     "    print(ans)\n",
     "    pass\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
     "    ans=[]\n",
-    "    for x in x_values\n",
+    "    for x in x_values:\n",
     "        ans.append(3*x*6)\n",
     "    print(ans)\n",
     "    pass\n",
