--- a/index.ipynb
+++ b/index.ipynb
@@ -114,18 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-af8b9c7e67a2>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-af8b9c7e67a2>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    for x in x_values\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "zero_to_ten = list(range(0, 11))\n",
     "zero_to_four = list(range(0, 5))\n",
@@ -153,7 +144,7 @@
     "\n",
     "def y_values_for_at_nine(x_values):\n",
     "    ans=[]\n",
-    "    for x in x_values\n",
+    "    for x in x_values:\n",
     "        ans.append(3*x*9)\n",
     "    print(ans)\n",
     "    pass"
@@ -161,11 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 3, 6, 9, 12]\n",
+      "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n",
+      "[0, 9, 18, 27, 36]\n",
+      "[0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90]\n",
+      "[0, 18, 36, 54, 72]\n",
+      "[0, 18, 36, 54, 72, 90, 108, 126, 144, 162, 180]\n",
+      "[0, 27, 54, 81, 108]\n",
+      "[0, 27, 54, 81, 108, 135, 162, 189, 216, 243, 270]\n"
+     ]
+    }
+   ],
    "source": [
     "y_values_for_at_one(zero_to_four) # [0, 3, 6, 9, 12]\n",
     "y_values_for_at_one(zero_to_ten) # [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n",
