--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -193,11 +193,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n",
+      "[0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90]\n",
+      "[0, 18, 36, 54, 72, 90, 108, 126, 144, 162, 180]\n",
+      "[0, 27, 54, 81, 108, 135, 162, 189, 216, 243, 270]\n"
+     ]
+    }
+   ],
    "source": [
     "from graph import trace_values\n",
     "\n",
@@ -212,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -232,9 +253,11 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x, y) at y=1",
          "text": [],
+         "type": "scatter",
+         "uid": "a4d1d310-0aec-11e9-8c26-ab83ed3a3a75",
          "x": [
           0,
           1,
@@ -247,13 +270,14 @@
           8,
           9,
           10
-         ],
-         "y": null
+         ]
         },
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x, y) at y=3",
          "text": [],
+         "type": "scatter",
+         "uid": "a4d1d5f4-0aec-11e9-8c26-ab83ed3a3a75",
          "x": [
           0,
           1,
@@ -266,13 +290,14 @@
           8,
           9,
           10
-         ],
-         "y": null
+         ]
         },
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x, y) at y=6",
          "text": [],
+         "type": "scatter",
+         "uid": "a4d1d752-0aec-11e9-8c26-ab83ed3a3a75",
          "x": [
           0,
           1,
@@ -285,13 +310,14 @@
           8,
           9,
           10
-         ],
-         "y": null
+         ]
         },
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x, y) at y=9",
          "text": [],
+         "type": "scatter",
+         "uid": "a4d1d888-0aec-11e9-8c26-ab83ed3a3a75",
          "x": [
           0,
           1,
@@ -304,8 +330,7 @@
           8,
           9,
           10
-         ],
-         "y": null
+         ]
         }
        ],
        "layout": {
@@ -313,10 +338,10 @@
        }
       },
       "text/html": [
-       "<div id=\"b9f28f7d-614c-457b-a33a-f3f647415c1f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b9f28f7d-614c-457b-a33a-f3f647415c1f\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=1\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=3\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=6\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=9\", \"text\": []}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"ed8dc4f0-31ce-42bf-8d90-6d2276ad61a6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ed8dc4f0-31ce-42bf-8d90-6d2276ad61a6\", [{\"mode\": \"lines\", \"name\": \"f(x, y) at y=1\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\", \"uid\": \"a4db6bd2-0aec-11e9-8c26-ab83ed3a3a75\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\", \"uid\": \"a4db6d94-0aec-11e9-8c26-ab83ed3a3a75\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=6\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\", \"uid\": \"a4db6e7a-0aec-11e9-8c26-ab83ed3a3a75\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=9\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\", \"uid\": \"a4db6f2e-0aec-11e9-8c26-ab83ed3a3a75\"}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"b9f28f7d-614c-457b-a33a-f3f647415c1f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b9f28f7d-614c-457b-a33a-f3f647415c1f\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=1\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=3\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=6\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"y\": null, \"mode\": \"line\", \"name\": \"f(x, y) at y=9\", \"text\": []}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"ed8dc4f0-31ce-42bf-8d90-6d2276ad61a6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ed8dc4f0-31ce-42bf-8d90-6d2276ad61a6\", [{\"mode\": \"lines\", \"name\": \"f(x, y) at y=1\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\", \"uid\": \"a4db6bd2-0aec-11e9-8c26-ab83ed3a3a75\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=3\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\", \"uid\": \"a4db6d94-0aec-11e9-8c26-ab83ed3a3a75\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=6\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\", \"uid\": \"a4db6e7a-0aec-11e9-8c26-ab83ed3a3a75\"}, {\"mode\": \"lines\", \"name\": \"f(x, y) at y=9\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10], \"type\": \"scatter\", \"uid\": \"a4db6f2e-0aec-11e9-8c26-ab83ed3a3a75\"}], {\"title\": \"constants with linear functions\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
