--- a/index.ipynb
+++ b/index.ipynb
@@ -516,7 +516,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_one():\n",
-    "    a\n",
+    "    ans=3*1\n",
     "    pass"
    ]
   },
@@ -529,6 +529,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_three():\n",
+    "    ans=3*3\n",
     "    pass"
    ]
   },
@@ -541,6 +542,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_six():\n",
+    "    ans=3*6\n",
     "    pass"
    ]
   },
@@ -553,6 +555,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
+    "    ans=3\n",
     "    pass"
    ]
   },
