Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -517,6 +517,7 @@
    "source": [
     "def df_dx_when_y_equals_one():\n",
     "    ans=3*1\n",
+    "    print(ans)\n",
     "    pass"
    ]
   },
@@ -530,6 +531,7 @@
    "source": [
     "def df_dx_when_y_equals_three():\n",
     "    ans=3*3\n",
+    "    print(ans)\n",
     "    pass"
    ]
   },
@@ -543,6 +545,7 @@
    "source": [
     "def df_dx_when_y_equals_six():\n",
     "    ans=3*6\n",
+    "    print(ans)\n",
     "    pass"
    ]
   },
@@ -555,7 +558,8 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
-    "    ans=3\n",
+    "    ans=3*9\n",
+    "    print(ans)\n",
     "    pass"
    ]
   },
