--- a/index.ipynb
+++ b/index.ipynb
@@ -571,7 +571,7 @@
    "outputs": [],
    "source": [
     "def df_dx_3xy(x_value, y_value):\n",
-    "    ans=\n",
+    "    ans=3*x**0\n",
     "    pass"
    ]
   },
