--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -696,6 +696,8 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
+    "    for i in list_of_terms\n",
+    "    \n",
     "    pass"
    ]
   },
