Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -699,6 +699,8 @@
     "    i=0\n",
     "    ans=[]\n",
     "    for i in list_of_terms\n",
+    "        c=\n",
+    "        x=list_of_terms\n",
     "        ans.append()\n",
     "    pass"
    ]
