--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -699,8 +699,9 @@
     "    i=0\n",
     "    ans=[]\n",
     "    for i in list_of_terms\n",
-    "        c=\n",
-    "        x=list_of_terms\n",
+    "        c=list_of_terms[i][0]\n",
+    "        x=list_of_terms[i][1]\n",
+    "        \n",
     "        ans.append()\n",
     "    pass"
    ]
