Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -689,16 +689,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
     "    i=0\n",
     "    ans=[]\n",
-    "    for i in list_of_terms\n",
+    "    term=[]\n",
+    "    for i in list_of_terms:\n",
     "        c=list_of_terms[i][0]\n",
     "        x=list_of_terms[i][1]\n",
     "        y=list_of_terms[i][2]\n",
