Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -701,7 +701,7 @@
     "        c=list_of_terms[i][0]\n",
     "        x=list_of_terms[i][1]\n",
     "        y=list_of_terms[i][2]\n",
-    "        term=c*x_value**x*y_value**y\n",
+    "        term=c*(x_value**x)*y_value**y\n",
     "        i=i+1\n",
     "        ans.append(term)\n",
     "    print(ans)\n",
