Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -697,7 +697,7 @@
     "    i=0\n",
     "    ans=[]\n",
     "    term=[]\n",
-    "    for i in list_of_terms:\n",
+    "    for i in ranlist_of_terms:\n",
     "        c=list_of_terms[i][0]\n",
     "        x=list_of_terms[i][1]\n",
     "        y=list_of_terms[i][2]\n",
