--- a/index.ipynb
+++ b/index.ipynb
@@ -811,7 +811,7 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    anst\n",
+    "    ans=term[0]*\n",
     "    pass"
    ]
   },
