Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -811,7 +811,7 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    ans=term[0]*(term[1]-1)*\n",
+    "    ans=term[0]*term[1], -1)*\n",
     "    pass"
    ]
   },
