Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -804,14 +804,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-41-3f39468a83ea>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-3f39468a83ea>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    ans=[term[0]*term[1], term[1]-1)]\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def term_df_dx(term):\n",
-    "    ans=term[0]*term[1], -1)*\n",
+    "    ans=[term[0]*term[1], term[1]-1)]\n",
     "    pass"
    ]
   },
