--- a/index.ipynb
+++ b/index.ipynb
@@ -804,31 +804,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-41-3f39468a83ea>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-3f39468a83ea>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    ans=[term[0]*term[1], term[1]-1)]\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    ans=[term[0]*term[1], term[1]-1)]\n",
+    "    ans=[term[0]*term[1], term[1]-1]\n",
+    "    print(ans)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "four_x_squared_y = (4, 2, 1)\n",
     "term_df_dx(four_x_squared_y) # (8, 1, 1) "
