Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -809,7 +809,7 @@
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    ans=[term[0]*term[1], term[1]-1]\n",
+    "    ans=[term[0]*term[1], term[1]-1], term[2]\n",
     "    print(ans)\n",
     "    pass"
    ]
