Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -804,26 +804,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    ans=[term[0]*term[1], term[1]-1], term[2]\n",
+    "    ans=[term[0]*term[1], term[1]-1, term[2]]\n",
     "    print(ans)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8, 1]\n"
+      "[8, 1, 1]\n"
      ]
     }
    ],
@@ -841,11 +841,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, -1, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "y = (1, 0, 1)\n",
     "term_df_dx(y) # (0, -1, 1)"
