Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -881,7 +881,8 @@
     "    ans=[]\n",
     "    t=0\n",
     "    for t in range(0,len(list_of_terms)):\n",
-    "        ans.append(term_df_dx(list_of_terms[t]))\n",
+    "        ans.append(\n",
+    "            term_df_dx(list_of_terms[t]))\n",
     "        t=t+1\n",
     "    print(ans)\n",
     "    pass"
