--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -882,8 +882,8 @@
     "    t=0\n",
     "    for t in range(0,len(list_of_terms)):\n",
     "        term_out=term_df_dx(list_of_terms[t])\n",
-    "        if term_out[0] \n",
-    "        ans.append(\n",
+    "        if term_out[0] != 0:\n",
+    "            ans.append(term_out)\n",
     "            term_df_dx(list_of_terms[t]))\n",
     "        t=t+1\n",
     "    print(ans)\n",
