Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -879,9 +879,11 @@
    "source": [
     "def df_dx(list_of_terms):\n",
     "    ans=[]\n",
+    "    \n",
     "    t=0\n",
     "    for t in range(0,len(list_of_terms)):\n",
-    "        term_out=term_df_dx(list_of_terms[t])\n",
+    "        term_o\n",
+    "    term_out=term_df_dx(list_of_terms[t])\n",
     "        if term_out[0] != 0:\n",
     "            ans.append(term_out)\n",
     "        t=t+1\n",
