Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -804,21 +804,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-75-70fda64c73ab>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-75-70fda64c73ab>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if ans[0]+==0\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def term_df_dx(term):\n",
     "    ans=[term[0]*term[1], term[1]-1, term[2]]\n",
     "    print(ans)\n",
-    "    if ans[0]==0\n",
+    "    if ans[0]+==0\n",
+    "        continue\n",
+    "    else\n",
     "    return(ans)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +845,7 @@
        "[8, 1, 1]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
