Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -804,15 +804,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-78-9c0ff72876c5>, line 6)",
+     "evalue": "'continue' not properly in loop (<ipython-input-80-d73ca6cc785e>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-78-9c0ff72876c5>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    else\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-80-d73ca6cc785e>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    continue\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'continue' not properly in loop\n"
      ]
     }
    ],
@@ -821,9 +821,9 @@
     "    ans=[term[0]*term[1], term[1]-1, term[2]]\n",
     "    print(ans)\n",
     "    if (ans[0]==0):\n",
-    "        continue\n",
+    "        return(0,0,0)\n",
     "    else:\n",
-    "    return(ans)\n",
+    "        return(ans)\n",
     "    pass"
    ]
   },
