Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,16 +908,17 @@
     "    for t in range(0,len(list_of_terms)):\n",
     "        term_out=[]\n",
     "        term_out=term_df_dx(list_of_terms[t])\n",
-    "#        if term_out[0] != 0:\n",
+    "        if term_out[0] == 0:\n",
     "#            ans.append(term_out)\n",
     "        t=t+1\n",
+    "    return(ans)\n",
     "    print(ans)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -926,9 +927,18 @@
      "text": [
       "[8, 1, 1]\n",
       "[3, 0, 0]\n",
-      "[0, -1, 1]\n",
-      "[]\n"
+      "[0, -1, 1]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
