Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,6 +909,7 @@
     "        term_out=[]\n",
     "        term_out=term_df_dx(list_of_terms[t])\n",
     "        if term_out[0] == 0:\n",
+    "            continue\n",
     "#            ans.append(term_out)\n",
     "        t=t+1\n",
     "    return(ans)\n",
@@ -918,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +937,7 @@
        "[]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
