Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,8 @@
     "        term_out=term_df_dx(list_of_terms[t])\n",
     "        if term_out[0] == 0:\n",
     "            continue\n",
-    "#            ans.append(term_out)\n",
+    "        else:\n",
+    "            ans.append(term_out)\n",
     "        t=t+1\n",
     "    return(ans)\n",
     "    print(ans)\n",
@@ -919,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -934,10 +935,10 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[[8, 1, 1], [3, 0, 0]]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
