Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,13 +914,13 @@
     "            ans.append(term_out)\n",
     "        t=t+1\n",
     "    return(ans)\n",
-    "    print(ans)\n",
+    "  #  print(ans)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
        "[[8, 1, 1], [3, 0, 0]]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,6 +963,7 @@
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
+    "    term\n",
     "    pass"
    ]
   },
