Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -963,7 +963,8 @@
    "outputs": [],
    "source": [
     "def term_df_dy(term):\n",
-    "    term\n",
+    "    ans=[term[0]*term[2], term[2]-1, term[1]]\n",
+    "\n",
     "    pass"
    ]
   },
