Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1097,39 +1097,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 103,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    pass"
+    "    ans=[]\n",
+    "\n",
+    "    t=0\n",
+    "    for t in range(0,len(list_of_terms)):\n",
+    "        term_out=[]\n",
+    "        term_out=term_df_dy(list_of_terms[t])\n",
+    "        if term_out[0] == 0:\n",
+    "            continue\n",
+    "        else:\n",
+    "            ans.append(term_out)\n",
+    "        t=t+1\n",
+    "    return(ans)\n",
+    "    print(ans)\n",
+    "    pass   \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[4, 2, 0], [1, 0, 0]]"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_dy(four_x_squared_y_plus_three_x_plus_y) # [(4, 2, 0), (1, 0, 0)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2, 3, 0), (3, 1, 0)]"
+       "[[2, 3, 0], [3, 1, 0]]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
